[package]
name = "lamina_test"
version = "1.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
zip = "4.3.0"
dotenv = "0.15.0"
rand = "0.9.2"
rstest = "0.26.1"
base64 = "0.22.1"


[[bench]]
name = "benchmarks"
harness = false
path = "benchmarks"
# https://nexte.st/docs/integrations/criterion/
